--- a/Trabajo8/index.html
+++ b/Trabajo8/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Producto</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -43,6 +43,23 @@
       .navbar-brand,
       .nav-link {
         color: white !important;
+      }
+
+      .card-body .btn {
+        margin-right: 5px;
+      }
+      .add-button-container {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 20px;
+        margin-right: 10px;
+        padding: 0 15px;
+      }
+
+      .card img {
+        height: 180px;
+        object-fit: cover;
+        background-color: #e9ecef;
       }
     </style>
   </head>
@@ -94,10 +111,24 @@
         </div>
 
         <div class="col-md-10">
+          <div class="add-button-container">
+            <button
+              class="btn btn-success"
+              data-bs-toggle="modal"
+              data-bs-target="#editModal"
+            >
+              Añadir
+            </button>
+          </div>
+
           <div class="row mt-4">
             <div class="col-md-4">
               <div class="card" style="width: 18rem">
-                <img src="..." class="card-img-top" alt="..." />
+                <img
+                  src="https://via.placeholder.com/180"
+                  class="card-img-top"
+                  alt="Imagen por defecto"
+                />
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -107,12 +138,24 @@
                   <a href="producto.html" class="btn btn-primary"
                     >Go somewhere</a
                   >
+                  <button
+                    class="btn btn-warning"
+                    data-bs-toggle="modal"
+                    data-bs-target="#editModal"
+                  >
+                    Editar
+                  </button>
+                  <button class="btn btn-danger">Eliminar</button>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card" style="width: 18rem">
-                <img src="..." class="card-img-top" alt="..." />
+                <img
+                  src="https://via.placeholder.com/180"
+                  class="card-img-top"
+                  alt="Imagen por defecto"
+                />
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -122,12 +165,24 @@
                   <a href="producto.html" class="btn btn-primary"
                     >Go somewhere</a
                   >
+                  <button
+                    class="btn btn-warning"
+                    data-bs-toggle="modal"
+                    data-bs-target="#editModal"
+                  >
+                    Editar
+                  </button>
+                  <button class="btn btn-danger">Eliminar</button>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card" style="width: 18rem">
-                <img src="..." class="card-img-top" alt="..." />
+                <img
+                  src="https://via.placeholder.com/180"
+                  class="card-img-top"
+                  alt="Imagen por defecto"
+                />
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -137,6 +192,14 @@
                   <a href="producto.html" class="btn btn-primary"
                     >Go somewhere</a
                   >
+                  <button
+                    class="btn btn-warning"
+                    data-bs-toggle="modal"
+                    data-bs-target="#editModal"
+                  >
+                    Editar
+                  </button>
+                  <button class="btn btn-danger">Eliminar</button>
                 </div>
               </div>
             </div>
@@ -144,6 +207,78 @@
         </div>
       </div>
     </div>
+
+    <div
+      class="modal fade"
+      id="editModal"
+      tabindex="-1"
+      aria-labelledby="editModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="editModalLabel">
+              Formulario de Edición
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="formName" class="form-label">Nombre</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="formName"
+                  placeholder="Ingresa el nombre"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="formDescription" class="form-label"
+                  >Descripción</label
+                >
+                <textarea
+                  class="form-control"
+                  id="formDescription"
+                  rows="3"
+                  placeholder="Ingresa la descripción"
+                ></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="formImage" class="form-label"
+                  >URL de la imagen</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="formImage"
+                  placeholder="Ingresa la URL de la imagen"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cerrar
+            </button>
+            <button type="button" class="btn btn-primary">
+              Guardar cambios
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
