--- a/Trabajo8/producto.html
+++ b/Trabajo8/producto.html
@@ -18,13 +18,27 @@
         color: white !important;
       }
 
+      .carousel-container {
+        width: 700px;
+        height: 500px;
+        overflow: hidden;
+      }
+
       .product-carousel img {
-        max-height: 400px;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
       }
 
-      .product-table {
-        margin-top: 20px;
+      .featured-content {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+
+      .text-container {
+        margin-left: 20px;
+        flex-grow: 1;
       }
     </style>
   </head>
@@ -67,59 +81,71 @@
     <div class="card mt-4">
       <div class="card-header">Featured</div>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">
-          With supporting text below as a natural lead-in to additional content.
-        </p>
-        <div
-          id="productCarousel"
-          class="carousel slide product-carousel"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="https://via.placeholder.com/800x400"
-                class="d-block w-100"
-                alt="Imagen del Producto 1"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="https://via.placeholder.com/800x400"
-                class="d-block w-100"
-                alt="Imagen del Producto 2"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="https://via.placeholder.com/800x400"
-                class="d-block w-100"
-                alt="Imagen del Producto 3"
-              />
+        <div class="featured-content">
+          <div class="carousel-container">
+            <div
+              id="productCarousel"
+              class="carousel slide product-carousel"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="https://via.placeholder.com/800x400"
+                    class="d-block w-100"
+                    alt="Imagen del Producto 1"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://via.placeholder.com/800x400"
+                    class="d-block w-100"
+                    alt="Imagen del Producto 2"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://via.placeholder.com/800x400"
+                    class="d-block w-100"
+                    alt="Imagen del Producto 3"
+                  />
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#productCarousel"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#productCarousel"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#productCarousel"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#productCarousel"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+          <div class="text-container">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">
+              With supporting text below as a natural lead-in to additional
+              content.
+            </p>
+            <a href="#" class="btn btn-primary mt-4">Go somewhere</a>
+          </div>
         </div>
-
-        <a href="#" class="btn btn-primary mt-4">Go somewhere</a>
       </div>
     </div>
 
