--- a/Trabajo8/index.html
+++ b/Trabajo8/index.html
@@ -3,282 +3,109 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Producto</title>
+    <title>Document</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
     <style>
-      .sidebar {
-        background-color: #343a40;
-        min-height: 100vh;
-        color: white;
+      #res img {
+        max-width: 100%;
+        height: auto;
       }
 
-      .sidebar button {
-        color: white;
-        border-color: white;
-        margin-bottom: 10px;
+      @media (min-width: 768px) {
+        #res img {
+          height: 400px;
+        }
       }
 
-      .sidebar button:hover {
-        background-color: #495057;
-      }
-
-      .card {
-        background-color: #f8f9fa;
-        border: none;
-      }
-
-      .card-body {
-        background-color: #ffffff;
-        border-radius: 5px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      }
-
-      .navbar {
-        background-color: #007bff;
-      }
-
-      .navbar-brand,
-      .nav-link {
-        color: white !important;
-      }
-
-      .card-body .btn {
-        margin-right: 5px;
-      }
-      .add-button-container {
-        display: flex;
-        justify-content: flex-end;
-        margin-top: 20px;
-        margin-right: 10px;
-        padding: 0 15px;
-      }
-
-      .card img {
-        height: 180px;
-        object-fit: cover;
-        background-color: #e9ecef;
+      #logo-pizzeria {
+        max-width: 150px;
+        height: auto;
       }
     </style>
   </head>
-
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
-        <div class="col-md-2 sidebar p-4">
-          <h5 class="mb-4">Sidebar Menu</h5>
-          <button class="btn btn-outline-light w-100">Dashboard</button>
-          <button class="btn btn-outline-light w-100">Profile</button>
-          <button class="btn btn-outline-light w-100">Settings</button>
-          <button class="btn btn-outline-light w-100">Logout</button>
+        <h1 class="text-center">Pizzeria</h1>
+
+        <div class="col-md-5" id="res">
+          <div class="text-center">
+            <img
+              src="restaurant.jpg"
+              class="rounded img-fluid"
+              alt="Restaurante"
+            />
+          </div>
         </div>
 
-        <div class="col-md-10">
-          <div class="add-button-container">
-            <button
-              class="btn btn-success"
-              data-bs-toggle="modal"
-              data-bs-target="#editModal"
-            >
-              Añadir
-            </button>
+        <div class="col-md-7 d-flex flex-column align-items-center">
+          <div class="text-center mb-3">
+            <img
+              src="logoPizzeria.jpg"
+              id="logo-pizzeria"
+              class="rounded img-fluid"
+              alt="Logo Pizzería"
+            />
           </div>
 
-          <div class="row mt-4">
-            <div class="col-md-4">
-              <div class="card" style="width: 18rem">
-                <img
-                  src="https://via.placeholder.com/180"
-                  class="card-img-top"
-                  alt="Imagen por defecto"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="producto.html" class="btn btn-primary"
-                    >Go somewhere</a
-                  >
-                  <button
-                    class="btn btn-warning"
-                    data-bs-toggle="modal"
-                    data-bs-target="#editModal"
-                  >
-                    Editar
-                  </button>
-                  <button class="btn btn-danger">Eliminar</button>
-                </div>
-              </div>
+          <form
+            method="post"
+            class="w-75"
+            id="formulario"
+            action="/unidad4-Trabajos/Trabajo8/app/AuthController.php"
+          >
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label"
+                >Email address</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                name="email"
+                required
+              />
+              <div id="emailHelp" class="form-text"></div>
             </div>
-            <div class="col-md-4">
-              <div class="card" style="width: 18rem">
-                <img
-                  src="https://via.placeholder.com/180"
-                  class="card-img-top"
-                  alt="Imagen por defecto"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="producto.html" class="btn btn-primary"
-                    >Go somewhere</a
-                  >
-                  <button
-                    class="btn btn-warning"
-                    data-bs-toggle="modal"
-                    data-bs-target="#editModal"
-                  >
-                    Editar
-                  </button>
-                  <button class="btn btn-danger">Eliminar</button>
-                </div>
-              </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label"
+                >Password</label
+              >
+              <input
+                type="password"
+                class="form-control"
+                id="exampleInputPassword1"
+                name="password"
+                required
+              />
             </div>
-            <div class="col-md-4">
-              <div class="card" style="width: 18rem">
-                <img
-                  src="https://via.placeholder.com/180"
-                  class="card-img-top"
-                  alt="Imagen por defecto"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="producto.html" class="btn btn-primary"
-                    >Go somewhere</a
-                  >
-                  <button
-                    class="btn btn-warning"
-                    data-bs-toggle="modal"
-                    data-bs-target="#editModal"
-                  >
-                    Editar
-                  </button>
-                  <button class="btn btn-danger">Eliminar</button>
-                </div>
-              </div>
+            <div class="mb-3 form-check">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
+              <label class="form-check-label" for="exampleCheck1"
+                >Check me out</label
+              >
             </div>
-          </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <input type="hidden" name="action" value="login" />
+          </form>
         </div>
       </div>
     </div>
 
-    <div
-      class="modal fade"
-      id="editModal"
-      tabindex="-1"
-      aria-labelledby="editModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="editModalLabel">
-              Formulario de Edición
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="mb-3">
-                <label for="formName" class="form-label">Nombre</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="formName"
-                  placeholder="Ingresa el nombre"
-                />
-              </div>
-              <div class="mb-3">
-                <label for="formDescription" class="form-label"
-                  >Descripción</label
-                >
-                <textarea
-                  class="form-control"
-                  id="formDescription"
-                  rows="3"
-                  placeholder="Ingresa la descripción"
-                ></textarea>
-              </div>
-              <div class="mb-3">
-                <label for="formImage" class="form-label"
-                  >URL de la imagen</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="formImage"
-                  placeholder="Ingresa la URL de la imagen"
-                />
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Cerrar
-            </button>
-            <button type="button" class="btn btn-primary">
-              Guardar cambios
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
