--- a/Trabajo8/home.html
+++ b/Trabajo8/home.html
@@ -48,6 +48,7 @@
       .card-body .btn {
         margin-right: 5px;
       }
+
       .add-button-container {
         display: flex;
         justify-content: flex-end;
@@ -121,89 +122,7 @@
             </button>
           </div>
 
-          <div class="row mt-4">
-            <div class="col-md-4">
-              <div class="card" style="width: 18rem">
-                <img
-                  src="https://via.placeholder.com/180"
-                  class="card-img-top"
-                  alt="Imagen por defecto"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="producto.html" class="btn btn-primary"
-                    >Go somewhere</a
-                  >
-                  <button
-                    class="btn btn-warning"
-                    data-bs-toggle="modal"
-                    data-bs-target="#editModal"
-                  >
-                    Editar
-                  </button>
-                  <button class="btn btn-danger">Eliminar</button>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card" style="width: 18rem">
-                <img
-                  src="https://via.placeholder.com/180"
-                  class="card-img-top"
-                  alt="Imagen por defecto"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="producto.html" class="btn btn-primary"
-                    >Go somewhere</a
-                  >
-                  <button
-                    class="btn btn-warning"
-                    data-bs-toggle="modal"
-                    data-bs-target="#editModal"
-                  >
-                    Editar
-                  </button>
-                  <button class="btn btn-danger">Eliminar</button>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card" style="width: 18rem">
-                <img
-                  src="https://via.placeholder.com/180"
-                  class="card-img-top"
-                  alt="Imagen por defecto"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="producto.html" class="btn btn-primary"
-                    >Go somewhere</a
-                  >
-                  <button
-                    class="btn btn-warning"
-                    data-bs-toggle="modal"
-                    data-bs-target="#editModal"
-                  >
-                    Editar
-                  </button>
-                  <button class="btn btn-danger">Eliminar</button>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="row mt-4" id="product-list"></div>
         </div>
       </div>
     </div>
@@ -280,5 +199,42 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        fetch("app/ProductController.php")
+          .then((response) => response.json())
+          .then((data) => {
+            const productList = document.getElementById("product-list");
+
+            data.forEach((product) => {
+              const productCard = document.createElement("div");
+              productCard.className = "col-md-4 mb-4";
+
+              productCard.innerHTML = `
+                <div class="card" style="width: 18rem;">
+                  <img src="${
+                    product.cover || "https://via.placeholder.com/180"
+                  }" class="card-img-top" alt="Imagen del producto">
+                  <div class="card-body">
+                    <h5 class="card-title">${
+                      product.name || "Producto sin nombre"
+                    }</h5>
+                    <p class="card-text">${
+                      product.description || "Descripción no disponible"
+                    }</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                  </div>
+                </div>
+              `;
+
+              productList.appendChild(productCard);
+            });
+          })
+          .catch((error) =>
+            console.error("Error al cargar los productos:", error)
+          );
+      });
+    </script>
   </body>
 </html>
