--- a/Trabajo8/home.html
+++ b/Trabajo8/home.html
@@ -223,7 +223,9 @@
                     <p class="card-text">${
                       product.description || "Descripción no disponible"
                     }</p>
-                    <a href="#" class="btn btn-primary">Ver más</a>
+                    <a href="producto.html?slug=${
+                      product.slug
+                    }" class="btn btn-primary">Ver más</a>
                   </div>
                 </div>
               `;
